# fpl-programming-2025

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
2/: binary_trees.py  deque.py  recursion.py
2/code_design/: dependency_injection.py  solid.py
2/data_structures/: lists_perfomance.py
2/dynamic_programming/: dp_memo_functools.py  dp_tabulation.py
2_lesson/1_code_design/: dependency_injection.py  solid.py
2_lesson/2_data_structures/: lists_perfomance.py
2_lesson/2_data_structures/graphs/: graphs_adjacency_list.py  graphs_adjacency_matrix.py
2_lesson/3_dynamic_programming/: dp_memo_functools.py  dp_tabulation.py
2_lesson/4_algorithms/: recursion.py
2_lesson/algorithms/: merge_sort.py
2_lesson/dynamic_programming/: dp_memo.py  dp_naive.py
3/: graphs_bfs.py  graphs_dfs.py
3/configurations/: pydantic_ex.py  read_config_pydentic.py
3/graphs/: graphs_adjacency_list.py  graphs_adjacency_matrix.py
3/project_structure/: src_layout.txt
3_lesson/1_advanced_data_structures/: using_enum.py
3_lesson/3_configuration/: read_config_os_environ.py
3_lesson/4_dependency_management/: pyproject_ex.toml  requirements.xtx
3_lesson/configurations/: .env  pydantic_ex.py  read_config_os_environ.py
3_lesson/data_structures/: enum_ex.py  heap.py
3_lesson/dependency_management/: pyproject_ex.toml
3_lesson/graphs/: graphs_dfs.py
3_lesson/project_structure/: flat_layout.txt  src_layout.txt
4_lesson/1_packaging/: poetry_usage.md  pyproject_ex_packaging_poetry.toml  setup_ex_packaging_setuptools.py  setuptools_usage.md
4_lesson/2_linters_formatters/: pyproject_ex_ruff.toml  using_ruff.md
4_lesson/3_pre_commit/: .pre-commit-config_ex.yaml  pre_commit_usage.md
4_lesson/4_logging/: using_logging.py
5_lesson/1_async/: async_httpx.py  sync_httpx.py
5_lesson/2_api/: data_models.py  fastapi_base_ex.py
5_lesson/3_database/: data_models.py  db_utils.py  sqlite_ex.py
6_lesson/1_dunder_methods/: bag_example.py  counter_example.py  file_manager_2_example.py  file_manager_example.py  person_example.py  vector_2_example.py  vector_example.py
6_lesson/vibecoding/: example.py
src/lessons/2_lesson/algorithms/: merge_sort.py
src/lessons/2_lesson/data_structures/: binary_trees.py  deque.py
src/lessons/2_lesson/dynamic_programming/: dp_memo.py  dp_naive.py
src/lessons/3_lesson/configurations/: pydantic_ex.py  read_config_pydentic.py
src/lessons/3_lesson/data_structures/: heap.py
src/lessons/3_lesson/dependency_management/: poetry_ex.md  pyproject_ex.toml
src/lessons/3_lesson/graphs/: graphs_bfs.py  graphs_dfs.py
src/lessons/3_lesson/project_structures/: bad_structure.txt  flat_layout.txt
src/lessons/4_lesson/logging_ex/: structlog_using.py
src/lessons/4_lesson/packaging/: publishing.md  setup_ex.py  setup_usage.md
src/lessons/5_lesson/api/: fastapi_ex.py
src/lessons/5_lesson/async/: async_base.py  async_httpx.py  sync_httpx.py  synchronous_code.py
src/lessons/5_lesson/async_ex/: async_create_task.py  urls.py
src/lessons/5_lesson/database/: api_with_bd.py  async_api_with_bd.py  db_utils.py  sqlite_ex.py
