[build-system]
requires = ['poetry-core==2.2.1']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
package-mode = true
packages = [{ include = 'lessons', from = 'src' }]

[project]
name = 'fpl-programming'
version = '1.0.0'
description = 'Educational materials and examples for the FPL programming course'
authors = [
    { name = 'Alexandra Badasyan', email = 'abadasyan@hse.ru' },
]
readme = 'README.md'

requires-python = '>=3.10,<=3.14'
dependencies = []

[dependency-groups]
test = ['pytest==9.0.1']
dev = ['ruff==0.14.0', 'pre-commit==4.3.0', 'tomli==2.3.0', 'build==1.3.0']

[tool.ruff]
line-length = 120
target-version = 'py310'
exclude = ['**/tests/**']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['E', 'F', 'I']
ignore = []

[tool.ruff.lint.pydocstyle]
convention = 'pep257'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
