[tool.poetry]
package-mode = false

[project]
name = 'fpl-programming'
version = '1.0.0'
description = 'Educational materials and examples for the FPL programming course'
authors = [
    { name = 'Alexandra Badasyan', email = 'abadasyan@hse.ru' },
]
readme = 'README.md'

requires-python = '>=3.10,<=3.14'
dependencies = [
    'httpx==0.28.1',
    'fastapi[standard]==0.122.1',
    'uvicorn[standard]==0.38.0',
    'databases==0.9.0',
    'aiosqlite==0.21.0',
]

[dependency-groups]
dev = ['pre-commit==4.3.0']
